--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,12 @@
 {% extends 'base.html' %}
+
 {% block content %}
-    <h1>Hello world!</h1>
+
+<h1 class="mb-10 text-5xl">Home</h1>
+
+  <ul class="ml-10">
+    <li class="list-disc"><a href="{{ url_for('gallery') }}">Gallery</a></li>
+    <li class="list-disc"><a href="{{ url_for('login') }}">Login</a></li>
+    <li class="list-disc"><a href="{{ url_for('register') }}">Register</a></li>
+  </ul>
 {% endblock %}
