--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,6 +13,15 @@
     {% endif %}
 </head>
 <body>
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <ul>
+        {% for message in messages %}
+        <li class="text-3xl text-red-500 ">{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+    {% endwith %}
 
     {% block content %}
     {% endblock %}
