--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,6 +7,7 @@
   <ul class="ml-10">
     <li class="list-disc"><a href="{{ url_for('gallery') }}">Gallery</a></li>
     <li class="list-disc"><a href="{{ url_for('login') }}">Login</a></li>
+    <li class="list-disc"><a href="{{ url_for('logout') }}">Logout</a></li>
     <li class="list-disc"><a href="{{ url_for('register') }}">Register</a></li>
   </ul>
 {% endblock %}
