--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,5 +9,6 @@
     <li class="list-disc"><a href="{{ url_for('login') }}">Login</a></li>
     <li class="list-disc"><a href="{{ url_for('logout') }}">Logout</a></li>
     <li class="list-disc"><a href="{{ url_for('register') }}">Register</a></li>
+    <li class="list-disc"><a href="{{ url_for('select_avatar') }}">Select Avatar</a></li>
   </ul>
 {% endblock %}
