--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -4,21 +4,21 @@
     <div class="container flex flex-col items-center mx-auto">
         <form action="" method="POST" class="flex flex-col p-4 border border-gray-100 rounded-lg shadow-lg w-80" novalidate>
                 {{ form.hidden_tag()}}
-                <fieldset class="pb-2 ">
+                <fieldset class="pb-2">
                     {{form.email.label}}
-                    {{form.email(class_='mb-3 py-3 px-4 border border-gray-400 focus:outline-none rounded-md focus:ring-1 ')}}
+                    {{form.email(class_='mb-3 w-full py-3 px-4 border border-gray-400 focus:outline-none rounded-md focus:ring-1 ')}}
                     {% for error in form.email.errors %}
                         <span class="text-red-500"> {{error}} </span>
                     {% endfor %}
                 </fieldset>
-                <fieldset class="pb-2 ">
+                <fieldset class="pb-2">
                     {{form.password.label}}
-                    {{form.password(class_='mb-3 py-3 px-4 border border-gray-400 focus:outline-none rounded-md focus:ring-1 ')}}
+                    {{form.password(class_='mb-3 w-full py-3 px-4 border border-gray-400 focus:outline-none rounded-md focus:ring-1 ')}}
                     {% for error in form.password.errors %}
                         <span class="text-red-500 "> {{error}} </span>
                     {% endfor %}
                 </fieldset>
-                <fieldset class="pb-2 ">
+                <fieldset class="pb-2">
                     {{form.submit(class_='w-full bg-blue-500 text-white p-3 rounded-lg font-semibold text-lg focus:outline-none focus:ring-2')}}
                 </fieldset>
                 
