--- a/app/templates/select_avatar.html
+++ b/app/templates/select_avatar.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 <h1 class="mb-10 text-5xl text-center">Select Your Avatar</h1>
-<div class="container grid max-w-3xl grid-cols-4 mx-auto">
+<div class="container grid max-w-3xl grid-cols-4 gap-2 mx-auto">
     {% for avatar in avatars %}
-        <div><a href="{{url_for('select_avatar', selected=avatar)}}"><img src="{{avatar}}" alt=""></a></div>
+        <div class="p-2 border border-gray-300 rounded-full shadow-lg hover:bg-blue-100"><a href="{{url_for('select_avatar', selected=avatar)}}"><img src="{{avatar}}" alt=""></a></div>
     {% endfor %}
 </div>
 {% endblock content %}
