--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,6 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://kit.fontawesome.com/ea8e9f1dd8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/compiled.css') }}" type="text/css">
     {% if title %}
     <title>{{ title }} - Hot Dogz</title>
@@ -13,6 +14,9 @@
     {% endif %}
 </head>
 <body>
+    <header>
+        {% include '_navbar.html' %}
+    </header>
     {% with messages = get_flashed_messages() %}
     {% if messages %}
     <ul>
@@ -25,6 +29,6 @@
 
     {% block content %}
     {% endblock %}
-
+    <script src="{{url_for('static', filename='js/script.js')}}"></script>
 </body>
 </html>
