--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -3,11 +3,11 @@
 @tailwind utilities;
 
 .nav-link {
-    @apply block px-3 py-1 border-t-2 text-sunset-900 border-sunset-900 md:inline-block hover:text-sunset-500 md:border-none;
+    @apply block px-3 py-1 border-t-2 text-sunset-900 border-turquoise-200 md:inline-block hover:text-sunset-500 md:border-none;
 }
 
-.nav-btn {
-    @apply hidden w-full px-4 py-2 text-lg text-right text-white md:text-center md:inline-block md:w-36 md:rounded;
+/* .nav-btn {
+    @apply w-full px-4 py-2 text-lg text-right text-white md:text-center md:inline-block md:w-36 md:rounded;
 }
 
 .nav-btn-turquoise {
@@ -16,4 +16,4 @@
 
 .nav-btn-sunset {
     @apply bg-sunset-500 hover:bg-sunset-600;
-}
+} */
