--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,6 +5,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/ea8e9f1dd8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/compiled.css') }}" type="text/css">
     {% if title %}
@@ -21,7 +23,7 @@
     {% if messages %}
     <ul>
         {% for message in messages %}
-        <li class="text-3xl text-red-500 ">{{ message }}</li>
+        <li class="text-xl text-center text-white bg-turquoise-500 ">{{ message }}</li>
         {% endfor %}
     </ul>
     {% endif %}
