--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -6,6 +6,10 @@
     @apply block px-3 py-1 border-t-2 text-sunset-900 border-turquoise-200 md:inline-block hover:text-sunset-500 md:border-none;
 }
 
+.form-input {
+    @apply w-full px-4 py-3 mb-3 bg-white border border-gray-400 rounded-md focus:outline-none focus:ring-1 focus:ring-turquoise-400;
+}
+
 /* .nav-btn {
     @apply w-full px-4 py-2 text-lg text-right text-white md:text-center md:inline-block md:w-36 md:rounded;
 }
