--- a/app/templates/_dog_card.html
+++ b/app/templates/_dog_card.html
@@ -1,4 +1,4 @@
-<div class="grid w-full h-40 grid-cols-2 border-4 border-gray-300 border-dashed rounded-lg">
+<div class="grid w-full grid-cols-2 border-4 border-gray-300 border-dashed rounded-lg">
     <div class="grid p-2 place-items-center">
         <img src="{{dog.img_url}}" alt="A picture of my dog {{dog.name}}" class="object-cover w-full h-full rounded-lg">
     </div>
