--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -24,7 +24,7 @@
         {% if messages %}
         <ul>
             {% for message in messages %}
-            <li class="text-xl text-center text-white bg-turquoise-500 ">{{ message }}</li>
+            <li class="text-xl text-center text-white bg-tertiary-600 ">{{ message }}</li>
             {% endfor %}
         </ul>
         {% endif %}
