--- a/app/templates/upload_dog.html
+++ b/app/templates/upload_dog.html
@@ -34,7 +34,7 @@
                     {% endfor %}
                 </fieldset>
                 <fieldset class="pb-2 ">
-                    {{form.submit(class_='w-full bg-turquoise-500 hover:bg-turquoise-600 text-white p-3 rounded-lg font-semibold text-lg focus:outline-none focus:ring-4 focus:ring-turquoise-400 ')}}
+                    {{form.submit(class_='w-full bg-secondary-500 hover:bg-secondary-600 text-white p-3 rounded-lg font-semibold text-lg focus:outline-none focus:ring-4 focus:ring-secondary-400 ')}}
                 </fieldset>
                 
         </form>
