--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -33,7 +33,7 @@
                     {% endfor %}
                 </fieldset>
                 <fieldset class="pb-2 ">
-                    {{form.submit(class_='w-full bg-blue-500 text-white p-3 rounded-lg font-semibold text-lg focus:outline-none focus:ring-2')}}
+                    {{form.submit(class_='w-full bg-secondary-500 text-white p-3 rounded-lg font-semibold text-lg focus:outline-none focus:ring-2')}}
                 </fieldset>
                 
         </form>
