--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -19,7 +19,7 @@
                     {% endfor %}
                 </fieldset>
                 <fieldset class="pb-2">
-                    {{form.submit(class_='w-full bg-secondary-500 text-white p-3 rounded-lg font-semibold text-lg focus:outline-none focus:ring-2')}}
+                    {{form.submit(class_='w-full btn btn-secondary')}}
                 </fieldset>
                 
         </form>
