--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -4,7 +4,7 @@
 
 
 .btn {
-    @apply px-4 py-3 text-lg font-semibold leading-none text-center border rounded text-gray-50 focus:ring-2;
+    @apply py-3 text-lg font-bold leading-none tracking-wide text-center text-white border rounded focus:ring-2;
 }
 
 .btn-secondary {
@@ -13,6 +13,10 @@
 
 .btn-primary {
     @apply bg-primary-500 border-primary-600 hover:border-transparent hover:bg-primary-600 focus:ring-primary-300;
+}
+
+.form-input {
+    @apply w-full px-4 py-3 mb-3 border border-gray-400 rounded-md focus:outline-none focus:ring-1;
 }
 
 
