--- a/app/templates/_dog_card.html
+++ b/app/templates/_dog_card.html
@@ -21,6 +21,6 @@
                 <p><i class="text-red-600 fas fa-heart"></i> 10</p>
             </div>
         </div>
-        <a href="#" class="underline">Full Size / Comments</a>
+        <a href="{{url_for('dog_page', dog_id=dog.pk)}}" class="underline">Full Size / Comments</a>
     </div>
 </div>
