--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -21,7 +21,7 @@ html {
 }
 
 .form-input {
-    @apply w-full px-4 py-3 mb-3 border border-gray-400 rounded-md focus:outline-none focus:ring-1;
+    @apply w-full px-4 py-3 mb-3 bg-white border border-gray-400 rounded-md focus:outline-none focus:ring-1;
 }
 
 
