--- a/app/templates/_dog_card.html
+++ b/app/templates/_dog_card.html
@@ -1,6 +1,6 @@
-<div class="grid w-full grid-cols-2 border-4 border-gray-300 border-dashed rounded-lg">
-    <div class="grid p-2 place-items-center">
-        <img src="{{dog.img_url}}" alt="A picture of my dog {{dog.name}}" class="object-cover w-full h-full rounded-lg">
+<div class="grid w-full grid-cols-2 border-4 border-gray-300 border-dashed rounded-lg h-36">
+    <div class="grid place-items-center">
+        <img src="{{dog.img_url}}" alt="A picture of my dog {{dog.name}}" class="object-cover h-32 px-1 rounded-lg">
     </div>
     <div class="flex flex-col p-2 text-xs text-gray-600 justify-evenly">
         <p>Name: <span class="text-base text-gray-800 ">{{dog.name}}</span></p>
