--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -16,7 +16,7 @@
         </div>
         <div class="border-b-2 border-gray-300 ">
             <h1 class="py-2 text-3xl"> My Dogs </h1>
-            <div class="flex flex-col p-2">
+            <div class="flex flex-col gap-4 p-2">
                 {% if user_dogs|length %}
                     {% for dog in user_dogs %}
                         {% include '_dog_card.html' %}
@@ -25,7 +25,7 @@
                     <p>No dogs uploaded yet!</p>
                 {% endif %}
                 {% if user.username == current_user.username %}
-                    <a href=" {{url_for('upload_dog')}} " class="w-40 py-1 my-2 text-base text-center text-white rounded-lg bg-secondary-500 hover:bg-secondary-600 focus:outline-none focus:ring-2 focus:ring-secondary-400 ">Upload dog</a>
+                    <a href=" {{url_for('upload_dog')}} " class="w-40 py-1 text-base text-center text-white rounded-lg bg-secondary-500 hover:bg-secondary-600 focus:outline-none focus:ring-2 focus:ring-secondary-400 ">Upload dog</a>
                 {% endif %}
             </div>
         </div>
