add dog cards to gallery page

--- a/app/templates/_dog_card.html
+++ b/app/templates/_dog_card.html
@@ -1,4 +1,4 @@
-<div class="grid w-full grid-cols-2 border-4 border-gray-300 border-dashed rounded-lg h-36">
+<div class="grid w-full grid-cols-2 bg-white border-4 border-gray-300 border-dashed rounded-lg h-36">
     <div class="grid place-items-center">
         <img src="{{dog.img_url}}" alt="A picture of my dog {{dog.name}}" class="object-cover h-32 px-1 rounded-lg">
     </div>
