--- a/app/templates/dog_page.html
+++ b/app/templates/dog_page.html
@@ -6,7 +6,7 @@
         <a href="{{dog.img_url}}" target="_blank" class="px-1 -mt-6 font-semibold text-gray-300 bg-gray-700 opacity-70 hover:opacity-100 focus:opacity-100">Full-size image <i class="fas fa-external-link-alt"></i></a>
     </div>
     <div class="text-lg text-center">
-        <h2 class="py-4 text-5xl tracking-wide uppercase font-title text-primary-500 ">{{dog.name}}</h2>
+        <h2 class="title text-primary-500 ">{{dog.name}}</h2>
         <div class="flex gap-2 justify-evenly">
             <div class="flex-1">
                 <p class="text-xs text-gray-600 uppercase">Breed</p>
