--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -24,6 +24,9 @@ html {
     @apply w-full px-4 py-3 mb-3 bg-white border border-gray-400 rounded-md focus:outline-none focus:ring-1;
 }
 
+.title {
+    @apply py-4 text-5xl tracking-wide text-center uppercase font-title;
+}
 
 
 /* .nav-btn {
