--- a/app/templates/gallery.html
+++ b/app/templates/gallery.html
@@ -1,5 +1,17 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h1 class="mb-10 text-5xl">Gallery</h1>
+    <div class="bg-fixed bg-bottom bg-no-repeat bg-contain bg-dog5">
+        <h1 class="title text-secondary-500 ">Gallery</h1>
+        <div class="grid grid-cols-3 place-items-center">
+            <p>HOT</p>
+            <p>NEW</p>
+            <p>TOP</p>
+        </div>
+        <div class="flex flex-col h-screen gap-4 px-4 py-10 bg-white bg-opacity-70">
+                {% for dog in dogs %}
+                    {% include '_dog_card.html' %}
+                {% endfor %}
+        </div>
+    </div>
 
 {% endblock %}
