add custom styling for flash messages

--- a/hot_dogz/templates/profile.html
+++ b/hot_dogz/templates/profile.html
@@ -37,7 +37,7 @@
                         {% include '_dog_card.html' %}
                     {% endfor %}
                 {% else %}
-                    <p>No favouite dogs saved yet!</p>
+                    <p>No favourite dogs saved yet!</p>
                 {% endif %}
             </div>
         </div>
