--- a/hot_dogz/static/css/app.css
+++ b/hot_dogz/static/css/app.css
@@ -7,7 +7,7 @@ html {
 
 @tailwind utilities;
 
-
+/* BUTTONS */
 .btn {
     @apply py-3 text-lg font-bold leading-none tracking-wide text-center text-white border rounded focus:ring-2;
 }
@@ -20,23 +20,52 @@ html {
     @apply bg-primary-500 border-primary-600 hover:border-transparent hover:bg-primary-600 focus:ring-primary-300;
 }
 
+
+/* FORMS */
 .form-input {
     @apply w-full px-4 py-3 mb-3 bg-white border border-gray-400 rounded-md focus:outline-none focus:ring-1;
 }
 
+/* TYPOGRAPHY */
 .title {
     @apply py-4 text-5xl tracking-wide text-center uppercase font-title;
 }
 
 
-/* .nav-btn {
-    @apply w-full px-4 py-2 text-lg text-right text-white md:text-center md:inline-block md:w-36 md:rounded;
+/* FLASH COLORS TO MATCH ICON NAMES */
+.comment {
+    @apply bg-yellow-600;
+}
+.dog {
+    @apply bg-primary-500;
+}
+.thumbs-up {
+    @apply bg-blue-500;
+}
+.heart {
+    @apply bg-primary-600;
+}
+.check-circle {
+    @apply bg-green-500;
+}
+.exclamation {
+    @apply bg-primary-600;
 }
 
-.nav-btn-secondary {
-    @apply bg-secondary-500 hover:bg-secondary-600;
+/* FLASH ANIMATIONS */
+
+.animate-flash {
+    animation: animate-flash 2s ease-out forwards;
 }
 
-.nav-btn-primary {
-    @apply bg-primary-500 hover:bg-primary-600;
-} */
+@keyframes animate-flash {
+    0% {
+        opacity: 1;
+    }
+    80% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
