--- a/hot_dogz/templates/login.html
+++ b/hot_dogz/templates/login.html
@@ -5,9 +5,9 @@
         <form action="" method="POST" class="flex flex-col p-4 border border-gray-100 rounded-lg shadow-lg w-80" novalidate>
                 {{ form.hidden_tag()}}
                 <fieldset class="pb-2">
-                    {{form.email.label}}
-                    {{form.email(class_='mb-3 w-full py-3 px-4 border border-gray-400 focus:outline-none rounded-md focus:ring-1 ')}}
-                    {% for error in form.email.errors %}
+                    {{form.username.label}}
+                    {{form.username(class_='mb-3 w-full py-3 px-4 border border-gray-400 focus:outline-none rounded-md focus:ring-1 ')}}
+                    {% for error in form.username.errors %}
                         <span class="text-red-500"> {{error}} </span>
                     {% endfor %}
                 </fieldset>
