add route docstrings and HTML comments

--- a/hot_dogz/templates/gallery.html
+++ b/hot_dogz/templates/gallery.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
+    <!-- MAIN GALLERY PAGE -->
     <div class="bg-fixed bg-bottom bg-no-repeat bg-contain bg-dog5">
         <h1 class="title text-secondary-500 ">Gallery</h1>
         <div class="grid grid-cols-3 place-items-center">
