--- a/hot_dogz/templates/index.html
+++ b/hot_dogz/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
+<!-- LANDING PAGE (for anonymous users)-->
 <h1 class="mb-10 text-5xl">Home</h1>
 
 
