--- a/hot_dogz/templates/login.html
+++ b/hot_dogz/templates/login.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-
+    <!-- LOGIN FORM PAGE -->
     <div class="container flex flex-col items-center mx-auto">
         <form action="" method="POST" class="flex flex-col p-4 border border-gray-100 rounded-lg shadow-lg w-80" novalidate>
                 {{ form.hidden_tag()}}
