--- a/hot_dogz/templates/register.html
+++ b/hot_dogz/templates/register.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
+    <!-- RESITER ACCOUNT FORM PAGE -->
     <h1 class="mb-10 text-5xl">Register</h1>
     <div class="container flex flex-col items-center mx-auto">
         <form action="" method="POST" class="flex flex-col p-4 border border-gray-100 rounded-lg shadow-lg w-80" novalidate>
