--- a/hot_dogz/templates/select_avatar.html
+++ b/hot_dogz/templates/select_avatar.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<!-- AVATAR SELECTION PAGE -->
 <h1 class="mb-10 text-5xl text-center">Select Avatar</h1>
 <div class="container grid max-w-3xl grid-cols-4 gap-2 mx-auto">
     {% for avatar in avatars %}
