--- a/hot_dogz/templates/dog_page.html
+++ b/hot_dogz/templates/dog_page.html
@@ -1,10 +1,13 @@
 {% extends 'base.html' %}
 
 {% block content %}
+    <!-- DOG PROFILE PAGE -->
+    <!-- MAIN PICTURE -->
     <div class="flex flex-col items-center justify-end w-full">
         <img src="{{dog.img_url_thumb}}" alt="A picture of {{dog.name}}" class="object-cover rounded shadow-xl h-72">
         <a href="{{dog.img_url}}" target="_blank" class="px-1 -mt-6 font-semibold text-gray-300 bg-gray-700 opacity-70 hover:opacity-100 focus:opacity-100">Full-size image <i class="fas fa-external-link-alt"></i></a>
     </div>
+    <!-- DOG DETAILS (Name, Upload Date, Breed, About) -->
     <div class="text-lg text-center">
         <h2 class="title text-primary-500 ">{{dog.name}}</h2>
         <p class="text-xs italic text-gray-600">Added on: {{dog.upload_date.strftime('%d.%m.%Y')}}</p>
@@ -26,6 +29,7 @@
             <a href="#comment" class="text-2xl tracking-wide font-title text-primary-500">Leave {{dog.name}} a comment! <i class="fas fa-hand-point-down"></i></a>
         </div>
     </div>
+    <!-- DOG COMMENT SECTION -->
     <div class="flex flex-col gap-4">
         {% if comments|length %}
             {% for comment in comments %}
