--- a/hot_dogz/templates/upload_dog.html
+++ b/hot_dogz/templates/upload_dog.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<!-- UPLOAD DOG FORM PAGE -->
     <h1 class="mb-10 text-5xl text-center">Upload Dog</h1>
     <div class="container flex flex-col items-center mx-auto">
         <form action="" method="POST" enctype="multipart/form-data" class="flex flex-col max-w-2xl p-4 border border-gray-100 rounded-lg shadow-lg " novalidate>
