--- a/hot_dogz/templates/profile.html
+++ b/hot_dogz/templates/profile.html
@@ -11,7 +11,7 @@
                  {% if user.username == current_user.username %}
                  <div class="flex gap-2">
                     <a href=" {{url_for('users.select_avatar')}} " class="px-2 py-1 text-sm text-white rounded-lg bg-primary-500">Edit Avatar</a>
-                    <a href="" class="px-2 py-1 text-sm text-white rounded-lg bg-primary-500">Edit Account</a>
+                    <a href=" {{url_for('users.edit_profile')}} " class="px-2 py-1 text-sm text-white rounded-lg bg-primary-500">Edit Account</a>
                 </div>
                  {% endif %}
             </div>
