--- a/hot_dogz/templates/errors/404.html
+++ b/hot_dogz/templates/errors/404.html
@@ -3,5 +3,5 @@
 {% block content %}
     <h1>Oops. Page not found! (404)</h1>
     <p>That page does not exist. Please try a different location.</p>
-    <p><a href="{{ url_for('main.gallery') }}">Back</a></p>
+    <p><a href="{{ url_for('main.gallery', view='hot') }}">Back</a></p>
 {% endblock %}
