--- a/hot_dogz/templates/errors/403.html
+++ b/hot_dogz/templates/errors/403.html
@@ -3,5 +3,5 @@
 {% block content %}
     <h1>Whoops! You don't have permission to do that (403)</h1>
     <p>Please check your account and try again.</p>
-    <p><a href="{{ url_for('main.gallery') }}">Back</a></p>
+    <p><a href="{{ url_for('main.gallery', view='hot') }}">Back</a></p>
 {% endblock %}
