--- a/hot_dogz/templates/errors/403.html
+++ b/hot_dogz/templates/errors/403.html
@@ -1,7 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Whoops! You don't have permission to do that (403)</h1>
-    <p>Please check your account and try again.</p>
-    <p><a href="{{ url_for('main.gallery', view='hot') }}">Back</a></p>
+    <div class="min-h-screen bg-fixed bg-bottom bg-no-repeat bg-contain bg-dog1">
+        <div class="flex flex-col items-center gap-4 py-4 text-center">
+            <h1 class="text-2xl"><span class="text-4xl font-title text-primary-500">Oops.</span> Wrong permissions (403)</h1>
+            <p>Please check your account and try again.</p>
+            <button class="w-40 btn btn-secondary focus:outline-none" onclick="history.back(-1)">Go Back</button>
+        </div>
+    </div>
 {% endblock %}
